chore: use collections api