@@ -13,7 +13,6 @@ import org.springframework.dao.support.DataAccessUtils;
 import org.springframework.util.LinkedCaseInsensitiveMap;
 import java.util.ArrayList;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.LinkedHashSet;
@@ -75,7 +74,7 @@ public abstract class BasePersonAttributeDao implements PersonAttributeDao {
             if (seedValue instanceof List) {
                 multiSeed.put(seedName, (List<Object>) seedValue);
             } else {
-                multiSeed.put(seedName, Collections.singletonList(seedValue));
+                multiSeed.put(seedName, List.of(seedValue));
             }
         }
         return multiSeed;
